--- a/pom.xml
+++ b/pom.xml
@@ -255,30 +255,23 @@
 		</dependency>
 
 		<dependency>
-			<groupId>it.unimi</groupId>
+			<groupId>it.unimi.dsi</groupId>
 			<artifactId>dsiutils</artifactId>
-			<version>1.0.7</version>
+			<version>2.2.4</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
-			<groupId>it.unimi</groupId>
-			<artifactId>fastutil5</artifactId>
-			<version>5.1.5</version>
+			<groupId>fastutil</groupId>
+			<artifactId>fastutil</artifactId>
+			<version>5.0.9</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
-			<groupId>it.unimi</groupId>
+			<groupId>it.unimi.dsi</groupId>
 			<artifactId>webgraph</artifactId>
-			<version>2.4.2</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.archive</groupId>
-			<artifactId>heritrix</artifactId>
-			<version>1.14.3</version>
+			<version>3.4.3</version>
 			<scope>test</scope>
 		</dependency>
 
