--- a/pom.xml
+++ b/pom.xml
@@ -95,14 +95,8 @@
 
 			<dependency>
 				<groupId>org.apache.httpcomponents</groupId>
-				<artifactId>httpcore</artifactId>
-				<version>4.2.4</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.apache.httpcomponents</groupId>
 				<artifactId>httpclient</artifactId>
-				<version>4.2.5</version>
+				<version>4.5.8</version>
 			</dependency>
 
 			<dependency>
@@ -169,11 +163,6 @@
 
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpcore</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 		</dependency>
 
@@ -183,11 +172,17 @@
 		</dependency>
 
 		<dependency>
-		    <groupId>com.google.code.crawler-commons</groupId>
+		    <groupId>com.github.crawler-commons</groupId>
 		    <artifactId>crawler-commons</artifactId>
-		    <version>0.5</version>
+		    <version>1.0</version>
 		</dependency>
-		  
+
+		<dependency>
+		    <groupId>com.github.crawler-commons</groupId>
+		    <artifactId>http-fetcher</artifactId>
+		    <version>0.1-SNAPSHOT</version>
+		</dependency>
+
 		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
